# MateNews

./: .gitignore  README.md  build_and_publish.bat  build_and_publish_now.bat  install_hourly_build_task.ps1  install_startup_task.ps1  launch_build_and_publish_hidden.vbs  pyproject.toml  run_scheduled_build_and_publish.ps1
.state/: last_successful_run.txt
docs/: index.html
docs/ambito/: index_section.html
docs/axios/: index_section.html
docs/china_daily/: index_section.html
docs/el_cohete_a_la_luna/: index_section.html
docs/el_dia/: index_section.html
docs/el_observador/: index_section.html
docs/infobae/: index_section.html
docs/la_diaria/: index_section.html
docs/la_nacion/: index_section.html
docs/la_politica_online/: index_section.html
docs/letra_p/: index_section.html
docs/nodal/: index_section.html
docs/pagina_12/: index_section.html
docs/prev/: 2026-04-22-Miercoles.html  2026-04-23-Jueves.html  2026-04-24-Viernes.html  2026-04-26-Domingo.html  2026-04-27-Lunes.html  2026-04-28-Martes.html  2026-04-29-Miercoles.html  2026-04-30-Jueves.html  2026-05-01-Viernes.html  2026-05-02-Sabado.html  2026-05-03-Domingo.html  2026-05-04-Lunes.html  2026-05-05-Martes.html  2026-05-06-Miercoles.html  2026-05-07-Jueves.html  2026-05-08-Viernes.html  2026-05-09-Sabado.html  2026-05-10-Domingo.html  2026-05-11-Lunes.html  2026-05-12-Martes.html  2026-05-13-Miercoles.html  2026-05-14-Jueves.html  2026-05-15-Viernes.html  (+46 more)
templates/: index.html  noticia.html
tests/: test_contract.py  test_markdown_export.py
weekly_md/: semana_actual.md
(+9032 files in other folders)
